Mirror Modifiers + Curve crash #66862

Closed
opened 2019-07-13 15:25:42 +02:00 by Fabio Prinzis · 15 comments

Developer Note
I believe this is an issue with mirror modifier + curve. To reproduce it:

$./blender -b --python-expr "import bpy; bpy.ops.object.add(type='CURVE');bpy.data.objects['Curve'].modifiers.new('mod', 'MIRROR');bpy.context.view_layer.depsgraph.update()

Original Title
Smooth Vertices Crash

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error

Blender crashes to desktop after using the Smoothing slider on the Smooth Vertices command.

Exact steps for others to reproduce the error

Select some vertices, launch the Smooth Vertices command, change the smoothing value with the slider. The crash happens at random but it's tested (on my machine) to happen with Smooth Vertices active, though, it may crash in the same random way while using the Undo command too. As can be seen on this video it needs some time to trigger the crash:

https://youtu.be/1glMdIF90WA

I've also noticed a considerable slow down when the view is switched to the "quad" view, and then reverted back to single view (Toggle Maximize Area), as shown on the first part of the video.
MiG-29_007.blend

**Developer Note** I believe this is an issue with mirror modifier + curve. To reproduce it: ``` $./blender -b --python-expr "import bpy; bpy.ops.object.add(type='CURVE');bpy.data.objects['Curve'].modifiers.new('mod', 'MIRROR');bpy.context.view_layer.depsgraph.update() ``` **Original Title** Smooth Vertices Crash **System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** Blender crashes to desktop after using the Smoothing slider on the Smooth Vertices command. **Exact steps for others to reproduce the error** Select some vertices, launch the Smooth Vertices command, change the smoothing value with the slider. The crash happens at random but it's tested (on my machine) to happen with Smooth Vertices active, though, it may crash in the same random way while using the Undo command too. As can be seen on this video it needs some time to trigger the crash: https://youtu.be/1glMdIF90WA I've also noticed a considerable slow down when the view is switched to the "quad" view, and then reverted back to single view (Toggle Maximize Area), as shown on the first part of the video. [MiG-29_007.blend](https://archive.blender.org/developer/F7605542/MiG-29_007.blend)
Author

Added subscriber: @SonicBlue

Added subscriber: @SonicBlue

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I can get a crash the moment I open your file:

SUMMARY: AddressSanitizer: heap-buffer-overflow //source/blender/modifiers/intern/MOD_mirror.c:338 in doMirrorOnAxis
Full backtrace: P1036

Looking at it I managed to reproduce with these simple steps:

  • Create a Bezier Curve
  • Add a Mirror Modifier to it

OR:
$./blender -b --python-expr "import bpy; bpy.ops.object.add(type='CURVE');bpy.data.objects['Curve'].modifiers.new('mod', 'MIRROR');bpy.context.view_layer.depsgraph.update()

I can get a crash the moment I open your file: `SUMMARY: AddressSanitizer: heap-buffer-overflow //source/blender/modifiers/intern/MOD_mirror.c:338 in doMirrorOnAxis` Full backtrace: [P1036](https://archive.blender.org/developer/P1036.txt) Looking at it I managed to reproduce with these simple steps: * Create a Bezier Curve * Add a Mirror Modifier to it OR: ```$./blender -b --python-expr "import bpy; bpy.ops.object.add(type='CURVE');bpy.data.objects['Curve'].modifiers.new('mod', 'MIRROR');bpy.context.view_layer.depsgraph.update()```

Added subscriber: @CraigD

Added subscriber: @CraigD

For what it's worth, I tried to replicate this issue.

The first time I opened the file and copied the process shown in the video: toggling maximize area in the modelling.001 workspace and changing the smooth vertices slider without allowing the smooth vertices menu closing.

And after about 5 toggles and random changes to the slider Blender did crash.

I then tried to do this again but Blender crashed on load for the same file.

I tried to open it once more, and this time it loaded just fine. And I can no longer trigger Blender to crash following the steps in the video using that file. (I did 40+ toggles and slider changes without crash, closed and reloaded and tried another 40 toggles without crash, and then again a third time).

I then tried re-downloading the file to see if the original crash/crash on load might have modified the file. Tested again: could not trigger Blender to crash.

Note: going insane at this point. It's probably going to need a developer with console logging or something to figure out what's going on.

Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.25
Blender Build: RC1

For what it's worth, I tried to replicate this issue. The first time I opened the file and copied the process shown in the video: toggling maximize area in the modelling.001 workspace and changing the smooth vertices slider without allowing the smooth vertices menu closing. And after about 5 toggles and random changes to the slider Blender did crash. I then tried to do this again but Blender crashed on load for the same file. I tried to open it once more, and this time it loaded just fine. And I can no longer trigger Blender to crash following the steps in the video using that file. (I did 40+ toggles and slider changes without crash, closed and reloaded and tried another 40 toggles without crash, and then again a third time). I then tried re-downloading the file to see if the original crash/crash on load might have modified the file. Tested again: could not trigger Blender to crash. Note: going insane at this point. It's probably going to need a developer with console logging or something to figure out what's going on. Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.25 Blender Build: RC1
Dalai Felinto changed title from Smooth Vertices Crash to Mirror Modifiers + Curve crash 2019-07-13 19:27:21 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey wants to look at this one? It has the one-line-repro the way you like it ;)

@Sergey wants to look at this one? It has the one-line-repro the way you like it ;)

bezier_with_mirror.blend
@dfelinto
Here's a blend file with a bezier curve with a mirror modifier. It doesn't crash for me on RC1. Nor are there any errors apparent in the console. Am I misunderstanding?

[bezier_with_mirror.blend](https://archive.blender.org/developer/F7605999/bezier_with_mirror.blend) @dfelinto Here's a blend file with a bezier curve with a mirror modifier. It doesn't crash for me on RC1. Nor are there any errors apparent in the console. Am I misunderstanding?
Author

Thanks for checking @dfelinto, as @CraigD already reported, I too can't get Blender to crash following your instructions.

In #66862#720785, @CraigD wrote:
For what it's worth, I tried to replicate this issue.

The first time I opened the file and copied the process shown in the video: toggling maximize area in the modelling.001 workspace and changing the smooth vertices slider without allowing the smooth vertices menu closing.

And after about 5 toggles and random changes to the slider Blender did crash.

I then tried to do this again but Blender crashed on load for the same file.

I tried to open it once more, and this time it loaded just fine. And I can no longer trigger Blender to crash following the steps in the video using that file. (I did 40+ toggles and slider changes without crash, closed and reloaded and tried another 40 toggles without crash, and then again a third time).

I then tried re-downloading the file to see if the original crash/crash on load might have modified the file. Tested again: could not trigger Blender to crash.

Note: going insane at this point. It's probably going to need a developer with console logging or something to figure out what's going on.

Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.25
Blender Build: RC1

I have recorded other (longer) videos, in one it took almost 3 minutes of the same procedure to make it crash. The first time I noticed this problem it crashed almost instantly, after moving the slider 2 or 3 times and in some cases just touching it; also, I've tried the file again and some times would make Blender crash on opening for me too.

Thanks for checking @dfelinto, as @CraigD already reported, I too can't get Blender to crash following your instructions. > In #66862#720785, @CraigD wrote: > For what it's worth, I tried to replicate this issue. > > The first time I opened the file and copied the process shown in the video: toggling maximize area in the modelling.001 workspace and changing the smooth vertices slider without allowing the smooth vertices menu closing. > > And after about 5 toggles and random changes to the slider Blender did crash. > > I then tried to do this again but Blender crashed on load for the same file. > > I tried to open it once more, and this time it loaded just fine. And I can no longer trigger Blender to crash following the steps in the video using that file. (I did 40+ toggles and slider changes without crash, closed and reloaded and tried another 40 toggles without crash, and then again a third time). > > I then tried re-downloading the file to see if the original crash/crash on load might have modified the file. Tested again: could not trigger Blender to crash. > > Note: going insane at this point. It's probably going to need a developer with console logging or something to figure out what's going on. > > Operating system: Windows-10-10.0.17134 64 Bits > Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.25 > Blender Build: RC1 I have recorded other (longer) videos, in one it took almost 3 minutes of the same procedure to make it crash. The first time I noticed this problem it crashed almost instantly, after moving the slider 2 or 3 times and in some cases just touching it; also, I've tried the file again and some times would make Blender crash on opening for me too.
Howard Trickey was assigned by Sergey Sharybin 2019-07-13 20:10:38 +02:00

@dfelinto, technically, that wouldn't be my area. There is a very wrong assumption in MOD_modifier.c which thinks this modifier is only applyable on Mesh objects. This was introduced in 1a9e698099.

From my understanding the simplest fix is to check object type prior to accessing object's data: we don't support custom normals on curves/NURBS anyway.

@dfelinto, technically, that wouldn't be my area. There is a very wrong assumption in MOD_modifier.c which thinks this modifier is only applyable on Mesh objects. This was introduced in 1a9e698099. From my understanding the simplest fix is to check object type prior to accessing object's data: we don't support custom normals on curves/NURBS anyway.

@SonicBlue @CraigD the issue happens right away with a debug build with asan (memory address sanitizer). In a release (final user) build it won't necessarily crash right away, but it will lead to impredictable behaviour and apparent "random" crashes. There is a chance the original reported issue is something else, but either way this has to be solved first before re-testing vertex slide itself.

@SonicBlue @CraigD the issue happens right away with a debug build with asan (memory address sanitizer). In a release (final user) build it won't necessarily crash right away, but it will lead to impredictable behaviour and apparent "random" crashes. There is a chance the original reported issue is something else, but either way this has to be solved first before re-testing vertex slide itself.

@dfelinto I see. Thank you for explaining. I appreciate you taking the time. :)

@dfelinto I see. Thank you for explaining. I appreciate you taking the time. :)

This issue was referenced by 91f539b384

This issue was referenced by 91f539b384168aefa096fce3aecf555e2f47efc7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 35aa13734d

This issue was referenced by 35aa13734db4e034e5f8f3252d82137cd9943f70
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66862
No description provided.