Fix T66862: crash with mirror modifier applied to curve object